<resources>
    <string name="app_name">Education</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all_interests">Посмотреть все интересы</string>
    <string name="your_interests">Ваши интересы</string>
    <string name="volleyball">Волейбол</string>
    <string name="general">Главная</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="here_are_your_interests">Здесь будут отображаться\n ваши интересы</string>
    <string name="change_profile_data">Изменить данные профиля</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_tag">Ваш тег</string>
    <string name="your_email">Ваш email</string>
    <string name="your_password">Ваш пароль</string>
    <string name="your_vk_link">Ссылка на профиль VK</string>
    <string name="save">Сохранить</string>
</resources>