<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.ProfileEditFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/change_profile_data"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/your_name"
        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_head" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_user_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:maxLines="1"
        android:text="Владимир"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:background="@drawable/edit_text_background_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_user_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/your_tag"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_user_tag"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:maxLines="1"
        android:text="\@winebear"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:background="@drawable/edit_text_background_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user_tag" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/your_email"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user_tag" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_user_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:maxLines="1"
        android:text="vvzimin@edu.hse.ru"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:background="@drawable/edit_text_background_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user_email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/your_password"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_user_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:text="vvzimin@edu.hse.ru"
        android:drawableEnd="@drawable/outline_lock_24"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:background="@drawable/edit_text_background_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_user_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/your_vk_link"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_user_link"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:maxLines="1"
        android:text="vk.com/fsfsdfsf"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:background="@drawable/edit_text_background_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user_link" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user_link" />


</androidx.constraintlayout.widget.ConstraintLayout>